--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
 		"tslib": "^2.4.0",
 		"typescript": "4.7.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-auto": "^1.0.0-next.54"
+	}
 }
