--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"private": true,
 	"license": "UNLICENSED",
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
+		"dev": "vite dev",
+		"build": "vite build",
+		"package": "vite package",
+		"preview": "vite preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -15,7 +15,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-vercel": "1.0.0-next.58",
-		"@sveltejs/kit": "1.0.0-next.350",
+		"@sveltejs/kit": "^1.0.0-next.360",
 		"@typescript-eslint/eslint-plugin": "^5.28.0",
 		"@typescript-eslint/parser": "^5.28.0",
 		"autoprefixer": "^10.4.7",
@@ -34,7 +34,8 @@
 		"tailwindcss": "^3.1.3",
 		"ts-node": "^10.8.1",
 		"tslib": "^2.4.0",
-		"typescript": "4.7.3"
+		"typescript": "4.7.3",
+		"vite": "^2.9.13"
 	},
 	"type": "module",
 	"dependencies": {
