--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-vercel": "1.0.0-next.58",
+		"@sveltejs/adapter-vercel": "^1.0.0-next.61",
 		"@sveltejs/kit": "^1.0.0-next.360",
 		"@typescript-eslint/eslint-plugin": "^5.28.0",
 		"@typescript-eslint/parser": "^5.28.0",
