--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"license": "UNLICENSED",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --port 4444",
 		"build": "vite build",
 		"package": "vite package",
 		"preview": "vite preview",
@@ -14,7 +14,7 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-vercel": "^1.0.0-next.61",
+		"@sveltejs/adapter-vercel": "^1.0.0-next.66",
 		"@sveltejs/kit": "^1.0.0-next.405",
 		"@typescript-eslint/eslint-plugin": "^5.28.0",
 		"@typescript-eslint/parser": "^5.28.0",
@@ -27,7 +27,7 @@
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
 		"sass": "^1.52.3",
-		"svelte": "^3.48.0",
+		"svelte": "^3.49.0",
 		"svelte-check": "^2.7.2",
 		"svelte-preprocess": "^4.10.7",
 		"svelte-sitemap": "^2.5.1",
@@ -37,8 +37,5 @@
 		"typescript": "4.7.3",
 		"vite": "^3.0.4"
 	},
-	"type": "module",
-	"dependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0-next.54"
-	}
+	"type": "module"
 }
