--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-auto": "^1.0.0-next.64",
 		"@sveltejs/adapter-vercel": "^1.0.0-next.66",
 		"@sveltejs/kit": "^1.0.0-next.405",
 		"@typescript-eslint/eslint-plugin": "^5.28.0",
